# pdf-extractor

./: .editorconfig  .env.example  .gitattributes  .gitignore  BENCHMARK.md  CASE_STUDIES.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCOVERABILITY.md  GITHUB_SETUP.md  LICENSE  MANIFEST.in  README.md  RELEASE_v1.0.0.md  SECURITY.md  batch_extract.py  extract.example.yaml  pyproject.toml  setup.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: architecture.md  batch_extract.md  installation.md  output_formats.md
examples/: README.md  cybersecurity.yaml  multilingual.yaml  research_papers.yaml  scanned_docs.yaml
